--- a/src/components/blog/MarkdownView.scss
+++ b/src/components/blog/MarkdownView.scss
@@ -2,269 +2,106 @@
     display: flex;
     width: 1200px;
     margin: auto;
-    background: gray;
-    gap: 20px; 
+    gap: 20px;
     
     @media screen and (max-width: 1280px) {
-        width: 986px;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
+        // width: 986px;
+        // flex-wrap: wrap;
+        // justify-content: space-between;
 
-    
-    @media screen and (max-width: 1024px) {
-        width: 768px;
+        // .markdown-view-related{
+            // width: 100%;
 
-        .markdown-view-navigation{
-            width: 150px;
+            // &-cardsContainer{
+            //     flex-direction: row;
+            //     flex-wrap: wrap;
+            //     justify-content: center;
+            //     align-items: center;
+
+            //     a{
+            //         min-width: 300px;
+            //         max-width: 300px;
+            //     }
+            //     &:last-child {
+            //         margin-bottom: 20px;
+            //     }
+            // }
         }
-        .markdown-view-content{
-            max-width: 590px;            
-        }
-
-    }
-
-    @media (max-width: 768px) {
-        flex-direction: column;
-        width: 80%;
-    }
-    // @media screen and (max-width: 768px) {
-    //     width: 100%;
     // }
+
     
-}
+    // @media screen and (max-width: 1024px) {
+    //     width: 768px;
 
-.markdown-view {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: start;
-    gap: 30px;
-    padding: 0;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
+    //     .markdown-view-navigation{
+    //         width: 150px;
+    //     }
+    //     .markdown-view-content{
+    //         max-width: 590px;            
+    //     }
 
-    &-navigation a {
-        display: block;
-        padding: 0.5rem;
-        color: #495057;
-        text-decoration: none;
-        transition: background-color 0.2s ease;
+    // }
 
-        &:hover {
-            background-color: #e9ecef;
-            color: #212529;
-        }
-    }
+    // @media (max-width: 768px) {
+    //     flex-direction: column;
+    //     width: 85%;
 
-    li {
-        list-style-type: disclosure-closed;
-    }
+    //     .markdown-view-content{
+    //         max-width: 100%;
+    //     }
+    // }    
+// }
 
-    &-content {
+    .markdown-view {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: start;
+        gap: 30px;
+        padding: 0;
+        margin: 0;
         font-family: Arial, sans-serif;
         line-height: 1.6;
-        color: #333;
-        max-width: 720px;
-        margin: 0 auto;
-        background-color: rgb(254, 254, 254);
-        box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
-        padding: 30px;
 
-        h1 {
-            font-size: 2.5rem; // Decreased font size to 2.5rem
-            font-weight: bold;
-            margin-top: 2.5rem;
-
-            &+*:not(h2) {
-                margin-top: 5rem;
-            }
-
-            &+h2 {
-                margin-bottom: 5rem;
-                font-size: 22px; // Decreased font size to 22px
-                color: #303030d2;
-                font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-                padding-bottom: 15px;
-                border-bottom: 0.5px solid #30303036;
-            }
-        }
-
-        h2 {
-            font-size: 2.25rem; // Decreased font size to 2.25rem
-            font-weight: bold;
-            margin-bottom: 1.25rem;
-            margin-top: 1.1rem;
-        }
-
-        h3 {
-            font-size: 1.75rem; // Decreased font size to 1.75rem
-            font-weight: bold;
-            margin-bottom: 1rem;
-            margin-top: 1rem;
-
-        }
-
-        h4 {
-            font-size: 1.5rem; // Decreased font size to 1.5rem
-            font-weight: bold;
-            margin-bottom: 0.75rem;
-            margin-top: 0.75rem;
-
-        }
-
-        h5 {
-            font-size: 1.25rem; // Decreased font size to 1.25rem
-            font-weight: bold;
-            margin-bottom: 0.5rem;
-            margin-top: 0.5rem;
-
-        }
-
-        h6 {
-            font-size: 1rem; // Decreased font size to 1rem
-            font-weight: bold;
-            margin-bottom: 0.25rem;
-            margin-top: 0.25rem;
-        }
-
-        p {
-            margin-bottom: 1.25rem;
-            margin-top: 1.25rem;
-        }
-
-        a {
-            color: #007bff;
+        &-navigation a {
+            display: block;
+            padding: 0.5rem;
+            color: #495057;
             text-decoration: none;
+            transition: background-color 0.2s ease;
 
             &:hover {
-                text-decoration: underline;
+                background-color: #e9ecef;
+                color: #212529;
             }
-        }
-
-        code {
-            font-family: ui-monospace, monospace;
-
-            >span {
-                background-color: #f8f9fa;
-                font-family: ui-monospace, monospace;
-                font-family: ui-monospace, monospace;
-
-            }
-
-            margin-bottom: 1.25rem;
-            margin-top: 1.25rem;
-        }
-
-        ul,
-        ol {
-            margin-bottom: 1.25rem;
-            padding-left: 2rem;
         }
 
         li {
-            margin-bottom: 0.5rem;
+            list-style-type: disclosure-closed;
         }
-
-        blockquote {
-            margin: 1.5rem 0;
-            padding: 1rem;
-            background-color: #f8f9fa;
-            border-left: 4px solid #007bff;
-        }
-
-        pre {
-            background-color: #f8f9fa;
-            padding: 1rem;
-            border-radius: 4px;
-            overflow-x: auto;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 1.25rem;
-        }
-    }
-
-    .side-bar-toggle {
-        position: fixed;
-        left: 250px;
-        transition: left 0.3s;
-        z-index: 1000;
-        background-color: transparent;
-        border: none !important;
-
-        &.visible {
-            left: 250px;
-        }
-
-        &.hidden {
-            left: 0;
-        }
-
-        :hover {
-            border: none !important;
-        }
-    }
-
-    &-navigation {
-        width: 200px;
-        padding: 1.25rem;
-        overflow-y: auto;
-        transition: left 0.3s;
-        z-index: 10;
-        position: sticky;
-        top: 0;
-
-        &.visible {
-            left: -20px;
-        }
-
-        &.hidden {
-            left: -300px;
-        }
-    }
-    &-related{
-        width: 270px;
-        padding: 2px;
-        overflow-y: auto;
-        transition: left 0.3s;
-        z-index: 10;
-        position: sticky;
-        top: 0;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-
-        &-title{
-            text-align: center;
-            color: var(--text-dark);
-        }
-    }
-
-    //mobilw view
-    @media (max-width: 768px) {
-        max-width: 100vw !important;
-        align-items: flex-start;
 
         &-content {
-            padding: fill-available;
-            margin: 0;
-            max-width: 88vw;
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 720px;
+            margin: 0 auto;
+            background-color: rgb(254, 254, 254);
+            box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+            padding: 30px;
 
             h1 {
-                font-size: 2rem;
-                margin-top: 2rem;
+                font-size: 2.5rem; // Decreased font size to 2.5rem
+                font-weight: bold;
+                margin-top: 2.5rem;
 
                 &+*:not(h2) {
-                    margin-top: 3rem;
+                    margin-top: 5rem;
                 }
 
                 &+h2 {
-                    margin-bottom: 3rem;
-                    font-size: 20px;
+                    margin-bottom: 5rem;
+                    font-size: 22px; // Decreased font size to 22px
                     color: #303030d2;
                     font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
                     padding-bottom: 15px;
@@ -273,31 +110,39 @@
             }
 
             h2 {
-                font-size: 1.75rem;
+                font-size: 2.25rem; // Decreased font size to 2.25rem
+                font-weight: bold;
                 margin-bottom: 1.25rem;
                 margin-top: 1.1rem;
             }
 
             h3 {
-                font-size: 1.5rem;
+                font-size: 1.75rem; // Decreased font size to 1.75rem
+                font-weight: bold;
                 margin-bottom: 1rem;
                 margin-top: 1rem;
+
             }
 
             h4 {
-                font-size: 1.25rem;
+                font-size: 1.5rem; // Decreased font size to 1.5rem
+                font-weight: bold;
                 margin-bottom: 0.75rem;
                 margin-top: 0.75rem;
+
             }
 
             h5 {
-                font-size: 1rem;
+                font-size: 1.25rem; // Decreased font size to 1.25rem
+                font-weight: bold;
                 margin-bottom: 0.5rem;
                 margin-top: 0.5rem;
+
             }
 
             h6 {
-                font-size: 0.75rem;
+                font-size: 1rem; // Decreased font size to 1rem
+                font-weight: bold;
                 margin-bottom: 0.25rem;
                 margin-top: 0.25rem;
             }
@@ -323,6 +168,7 @@
                     background-color: #f8f9fa;
                     font-family: ui-monospace, monospace;
                     font-family: ui-monospace, monospace;
+
                 }
 
                 margin-bottom: 1.25rem;
@@ -346,11 +192,235 @@
                 border-left: 4px solid #007bff;
             }
 
+            pre {
+                background-color: #f8f9fa;
+                padding: 1rem;
+                border-radius: 4px;
+                overflow-x: auto;
+            }
 
+            img {
+                max-width: 100%;
+                height: auto;
+                margin-bottom: 1.25rem;
+            }
+        }
+
+        .side-bar-toggle {
+            position: fixed;
+            left: 250px;
+            transition: left 0.3s;
+            z-index: 1000;
+            background-color: transparent;
+            border: none !important;
+
+            &.visible {
+                left: 250px;
+            }
+
+            &.hidden {
+                left: 0;
+            }
+
+            :hover {
+                border: none !important;
+            }
         }
 
         &-navigation {
-            display: none;
+            width: 200px;
+            padding: 1.25rem;
+            overflow-y: auto;
+            transition: left 0.3s;
+            z-index: 10;
+            position: sticky;
+            top: 0;
+
+            &.visible {
+                left: -20px;
+            }
+
+            &.hidden {
+                left: -300px;
+            }
+        }
+        &-related{
+            width: 270px;
+            padding: 2px;
+            overflow-y: auto;
+            transition: left 0.3s;
+            z-index: 10;
+            position: sticky;
+            top: 0;
+
+            &-title{
+                text-align: center;
+                color: var(--text-dark);
+                margin-bottom: 20px;
+            }
+            &-cardsContainer{
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                width: 100%;
+                padding-bottom: 20px;
+            }   
+        }
+
+
+    }
+    @media screen and (max-width: 1280px) {
+        width: 986px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        .markdown-view{
+            &-related{
+                width: 100%;
+
+                &-cardsContainer{
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    align-items: center;
+
+                    a{
+                        min-width: 300px;
+                        max-width: 300px;
+                    }
+                    &:last-child {
+                        margin-bottom: 20px;
+                    }
+                }
+            }
+        }
+    }
+        
+    @media screen and (max-width: 1024px) {
+        width: 768px;
+        .markdown-view{
+            &-navigation{
+                width: 150px;
+            }
+            &-content{
+                max-width: 590px;            
+            }
+
+        }
+    }
+    //mobile view
+    @media (max-width: 768px) {
+        flex-direction: column;
+        width: 85%;
+        .markdown-view{
+
+            max-width: 100%;
+            align-items: flex-start;
+
+            &-content {
+                padding: fill-available;
+                margin: 0;
+                // max-width: 88vw;
+                max-width: 100%;
+
+                h1 {
+                    font-size: 2rem;
+                    margin-top: 2rem;
+
+                    &+*:not(h2) {
+                        margin-top: 3rem;
+                    }
+
+                    &+h2 {
+                        margin-bottom: 3rem;
+                        font-size: 20px;
+                        color: #303030d2;
+                        font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+                        padding-bottom: 15px;
+                        border-bottom: 0.5px solid #30303036;
+                    }
+                }
+
+                h2 {
+                    font-size: 1.75rem;
+                    margin-bottom: 1.25rem;
+                    margin-top: 1.1rem;
+                }
+
+                h3 {
+                    font-size: 1.5rem;
+                    margin-bottom: 1rem;
+                    margin-top: 1rem;
+                }
+
+                h4 {
+                    font-size: 1.25rem;
+                    margin-bottom: 0.75rem;
+                    margin-top: 0.75rem;
+                }
+
+                h5 {
+                    font-size: 1rem;
+                    margin-bottom: 0.5rem;
+                    margin-top: 0.5rem;
+                }
+
+                h6 {
+                    font-size: 0.75rem;
+                    margin-bottom: 0.25rem;
+                    margin-top: 0.25rem;
+                }
+
+                p {
+                    margin-bottom: 1.25rem;
+                    margin-top: 1.25rem;
+                }
+
+                a {
+                    color: #007bff;
+                    text-decoration: none;
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+
+                code {
+                    font-family: ui-monospace, monospace;
+
+                    >span {
+                        background-color: #f8f9fa;
+                        font-family: ui-monospace, monospace;
+                        font-family: ui-monospace, monospace;
+                    }
+
+                    margin-bottom: 1.25rem;
+                    margin-top: 1.25rem;
+                }
+
+                ul,
+                ol {
+                    margin-bottom: 1.25rem;
+                    padding-left: 2rem;
+                }
+
+                li {
+                    margin-bottom: 0.5rem;
+                }
+
+                blockquote {
+                    margin: 1.5rem 0;
+                    padding: 1rem;
+                    background-color: #f8f9fa;
+                    border-left: 4px solid #007bff;
+                }
+
+
+            }
+
+            &-navigation {
+                display: none;
+            }
         }
     }
 }
